# speech

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: kmm-rust.yml  kmm.yml
build-logic/: settings.gradle.kts
build-logic/convention/: build.gradle.kts
compass/core/: Readme.md  build.gradle.kts
compass/navigation/: build.gradle.kts
core/crypto-kt/: build.gradle.kts
core/design/: build.gradle.kts
core/domain/: build.gradle.kts
core/ui/: build.gradle.kts
crypto/: Cargo.toml
crypto/src/: lib.rs
crypto/src/android/: impl.rs  mod.rs
crypto/src/blockchains/: abstract_blockchain.rs  bitcoin_blockchain.rs  ethereum_blockchain.rs  ethereum_blockchains.rs  factory.rs  mod.rs
crypto/src/blockchains/bitcoin/: bitcoin_blockchain.rs  mod.rs
crypto/src/blockchains/ethereum/: ethereum_blockchain.rs  mod.rs
crypto/src/transactions/: abstract_signer.rs  abstract_transaction.rs  mod.rs
crypto/src/transactions/bitcoin/: bitcoin_signer.rs  bitcoin_transaction.rs  mod.rs
crypto/src/transactions/ethereum/: ethereum_signer.rs  ethereum_transaction.rs  mod.rs
crypto/tests/: bitcoin_blockchain_test.rs  ethereum_blockchain_test.rs  mod.rs
crypto/tests/blockchain_tests/: ethereum_blockchain_test.rs  mod.rs
crypto/tests/transaction_tests/: bitcoin_transaction_test.rs  ethereum_transaction_test.rs  mod.rs
gradle/: config.version.toml  libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
shared/: build.gradle.kts  shared.podspec
shared/core/ui/: build.gradle.kts  (+1 more)
vaultAndroid/: build.gradle.kts
(+356 files in other folders)
