[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

[lib]
name = "crypto"
path = "src/lib.rs"
#crate-type = ["cdylib"]

[dependencies]
jni = { version = "0.21.1", default-features = false }
rand = "0.8.5"
sha3 = "0.10.8"
k256 = "0.13.1"
hex = "0.4.3"
bip39 = "2.0.0"

[profile.release]
lto = true